--- a/src/components/Education.css
+++ b/src/components/Education.css
@@ -56,16 +56,7 @@
     color: #999;
 }
 
-@media (max-width: 768px) {
-    .timeline {
-    margin-left: 20px;
-    padding-left: 10px;
-    }
 
-    .timeline-content {
-    width: calc(100% - 20px);
-    }
-}
 
 @keyframes appear {
     from {
@@ -84,4 +75,19 @@ opacity: 0; /* Start invisible */
 
 .fade-in-visible {
 animation: appear 1s ease-out forwards; /* Apply the 'appear' animation when the element is in view */
+}
+
+/* Responsive Styles for Mobile Screens */
+@media (max-width: 1024px) {
+    .education {
+        margin: 0px;
+        margin-left: 20px;
+        font-family: 'Poppins', sans-serif;
+      }
+      
+    .education-heading {
+        font-size: 3rem;
+        font-weight: bold;
+        margin-bottom: 30px;
+    }
 }
