--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -10,11 +10,11 @@
   }
 
 .role {
-    font-size: 1rem;
-    font-style: italic;
+    font-size: 1.2rem;
+    /* font-style: italic; */
     margin-top: 0px;
     margin-bottom: 5px;
-    color: #b4b4b4;
+    color: #ffffff;
 }
 
 ul {
